# InPicture

./: .gitignore  README.md  main.py  pyproject.toml
data/coded/: README.md
data/decoded/: README.md
data/origin/: README.md
in_picture/: main.py
in_picture/modules/: automaticOpen.py  binary.py  colors.py  decode.py  encode.py  image.py  testUtils.py  ui.py
in_picture_detroix23.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
modules/: automaticOpen.py  binary.py  colors.py  decode.py  encode.py  image.py  images.py  maths.py  test_utils.py  ui.py
